bugfix: remove button z-index

--- a/blocks/button/_action/button_action_remove.css
+++ b/blocks/button/_action/button_action_remove.css
@@ -5,6 +5,7 @@
     border: none;
     background-color: transparent;
     position: absolute;
+    z-index: 1;
     top: 18px;
     right: 15px;
 }
